No idea what this does but it works.