@@ -8,4 +8,4 @@ RUN mvn -f /home/app/pom.xml clean test package
 FROM openjdk:8-jdk-alpine
 COPY --from=build /home/app/target/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java","-server","-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar","app.jar"]
